<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="10dp"
    tools:context=".MainActivity">

  <EditText
      android:id="@+id/etName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/Please_enter_your_name"
      android:gravity="center"
      android:autofillHints="" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_2"
        android:textColor="#fff"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/activity_3"
        android:textColor="#fff"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/tvResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/data_from_activity_3_will_displayed_here"
        android:gravity="center"/>


</LinearLayout>