<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20dp"
    tools:context=".Activity3">



    <EditText
        android:id="@+id/etsurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_enter_your_surname"
        android:gravity="center"
        android:textStyle="bold" />
    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:background="@color/colorPrimary"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/cancel"
        android:layout_marginTop="10dp"/>

</LinearLayout>